--- a/css/styles.css
+++ b/css/styles.css
@@ -25,18 +25,28 @@ body { display: flex; }
 
 .navHeader {
 	width: 100%;
-	background-color: grey;
 	height: 100px;
 }
 
 .navTitle {
-	color: #E8E8E8;
 	margin: auto;
 	font-size: 30px;
+	color: #AFAFAF;
+}
+
+.searchField {
+	background-image: url('search-icon.png');
+	background-size: 40px;
+	background-position: 0px 5px;
+	background-repeat: no-repeat;
+	padding: 0px 40px;
+	width: 100%; 
+	height: 50px;
+	font-size: 16px; 
+	color: #494949;
 }
 
 .locationItem {
-	color: black; 
 	font-size: 17px; 
 	color: #AFAFAF;
 	height: 70px;
