--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body { display: flex; }
 	background-color: #111;
 	font-family: Arial;
 	transition: 0.3s;
+	white-space: nowrap;
 }
 
 .navHeader {
@@ -53,6 +54,7 @@ body { display: flex; }
 	width: 100%;
 	padding: 0;
 	border: 0;
+	text: wrap;
 }
 
 .locationItem:hover {
