--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,22 @@
 html, body {
-  height: 100%; 
-	margin: 0; 
-	padding: 0; 
+  height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-body { display: flex; } 
+body { display: flex; }
 
 .box {
-	display: flex; 
+	display: flex;
 }
 
 .sideNav {
 	position: fixed;
 	z-index: 1;
-	width: 350px;
-	height: 100%; 
-	top: 0; 
-	left: 0; 
+	width: 275px;
+	height: 100%;
+	top: 0;
+	left: 0;
 	overflow-x: hidden;
 	background-color: #111;
 	font-family: Arial;
@@ -41,14 +41,14 @@ body { display: flex; }
 	background-position: 0px 5px;
 	background-repeat: no-repeat;
 	padding: 0px 40px;
-	width: 100%; 
+	width: 100%;
 	height: 50px;
-	font-size: 16px; 
+	font-size: 16px;
 	color: #494949;
 }
 
 .locationItem {
-	font-size: 17px; 
+	font-size: 15px;
 	color: #AFAFAF;
 	height: 70px;
 	width: 100%;
@@ -67,21 +67,22 @@ body { display: flex; }
 }
 
 main {
-	margin-left: 350px;
+	margin-left: 275px;
 	width: 100%;
 	height: 100%;
 	transition: margin-left 0.3s;
 }
 
 .mapHeader {
-	display: flex; 
+	display: flex;
 	background-color: #404040;
 	height: 10%;
+	white-space: nowrap;
 }
 
 .navIcon{
-	font-size: 30px; 
-	cursor: pointer; 
+	font-size: 30px;
+	cursor: pointer;
 	color: #0099FF;
 	margin: auto 20px;
 }
